--- a/index.html
+++ b/index.html
@@ -30,90 +30,102 @@
             position: fixed; width: 100%; top: 0; z-index: 1000; 
             box-shadow: 0 2px 15px rgba(0,0,0,0.05);
         }
+
         .logo img { height: 50px; width: auto; display: block; }
+
+        /* Desktop Nav */
         nav { display: flex; align-items: center; }
         .nav-list { display: flex; list-style: none; align-items: center; }
         .nav-item { position: relative; margin-left: 25px; }
+
         nav a { 
             text-decoration: none; color: var(--primary); 
             font-size: 13px; text-transform: uppercase; font-weight: 600; 
             letter-spacing: 1.5px; transition: var(--transition);
             padding: 10px 0;
         }
-        nav a:hover { color: var(--accent); }
+
+        nav a::after {
+            content: ''; position: absolute; bottom: 0; left: 0; width: 0; height: 2px;
+            background-color: var(--accent); transition: var(--transition);
+        }
+        nav a:hover::after { width: 100%; }
+
+        .dropdown { 
+            position: absolute; top: 100%; left: 0; background: white; min-width: 180px; 
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1); opacity: 0; visibility: hidden; 
+            transform: translateY(10px); transition: var(--transition); padding: 10px 0; 
+        }
+        .nav-item:hover .dropdown { opacity: 1; visibility: visible; transform: translateY(0); }
+        .dropdown a { display: block; padding: 10px 20px; text-transform: none; font-weight: 400; }
+        .dropdown a::after { display: none; }
+
+        /* Mobile Menu Toggle */
+        .menu-toggle { display: none; font-size: 24px; color: var(--primary); cursor: pointer; }
 
         /* --- HERO SECTION --- */
         .hero {
-            height: 85vh;
-            background: linear-gradient(rgba(44,57,107,0.5), rgba(44,57,107,0.3)), url('1.jpeg');
+            height: 80vh;
+            background: linear-gradient(rgba(44,57,107,0.4), rgba(44,57,107,0.2)), url('1.jpeg');
             background-size: cover; background-attachment: fixed; background-position: center;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             color: white; text-align: center; padding: 0 20px;
         }
-        .hero h1 { color: white; font-size: clamp(35px, 8vw, 85px); line-height: 1.1; margin-bottom: 10px; }
-        .hero p { font-size: clamp(12px, 2vw, 16px); letter-spacing: 5px; text-transform: uppercase; }
-
-        /* --- WHY CHOOSE US GRID (NEW) --- */
-        .features-grid {
-            padding: 100px 5%;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 30px;
-            background: var(--white);
-            text-align: center;
-        }
-        .feature-item { padding: 30px; transition: var(--transition); border-radius: 8px; }
-        .feature-item:hover { background: var(--bg-light); transform: translateY(-5px); }
-        .feature-item i { font-size: 40px; color: var(--primary); margin-bottom: 20px; }
-        .feature-item h3 { font-size: 22px; margin-bottom: 10px; }
-        .feature-item p { font-size: 14px; color: #666; line-height: 1.5; }
+        .hero h1 { color: white; font-size: clamp(32px, 8vw, 85px); line-height: 1.1; }
+        .hero p { font-size: clamp(14px, 2vw, 18px); letter-spacing: 4px; text-transform: uppercase; margin-top: 20px; }
 
         /* --- GENDER CARDS --- */
-        .gender-container { display: flex; flex-wrap: wrap; width: 100%; }
+        .gender-container { display: flex; flex-wrap: wrap; width: 100%; height: auto; min-height: 500px; }
         .gender-card { 
-            flex: 1; min-width: 300px; padding: 100px 20px;
+            flex: 1; min-width: 300px; padding: 60px 20px;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             text-decoration: none; transition: var(--transition);
-            position: relative; overflow: hidden;
         }
         .men-side { background: var(--primary); color: var(--white); }
         .women-side { background: var(--accent); color: var(--primary); }
-        .gender-card h2 { color: inherit; font-size: 35px; margin: 15px 0; }
-        .btn-view {
-            padding: 12px 35px; border: 1px solid currentColor;
-            text-transform: uppercase; font-size: 12px; letter-spacing: 2px;
-        }
+        
+        .gender-card i { font-size: 50px; margin-bottom: 20px; transition: var(--transition); }
+        .gender-card h2 { color: inherit; font-size: 30px; text-align: center; }
+        .gender-card:hover i { transform: scale(1.1) rotate(5deg); }
 
-        /* --- INFO BAR (NEW) --- */
-        .info-bar {
-            background: var(--primary);
-            color: white;
-            padding: 40px 5%;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            text-align: center;
+        .btn-view {
+            margin-top: 20px; padding: 12px 30px; border: 1px solid currentColor;
+            text-transform: uppercase; font-size: 11px; letter-spacing: 2px; transition: var(--transition);
         }
-        .info-box i { margin-bottom: 10px; font-size: 20px; color: var(--accent); }
-        .info-box h4 { font-family: 'Work Sans'; font-size: 13px; text-transform: uppercase; letter-spacing: 1px; }
+        .gender-card:hover .btn-view { background: white; color: var(--primary); border-color: white; }
 
         /* --- FOOTER --- */
-        footer { padding: 80px 5% 40px; background: #111; color: #888; text-align: center; }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 50px; }
-        footer h3 { color: var(--white); margin-bottom: 25px; font-size: 20px; }
-        .social-links i { font-size: 22px; margin: 0 15px; cursor: pointer; transition: 0.3s; }
-        .social-links i:hover { color: var(--accent); }
+        footer { padding: 60px 5%; background: #1a1a1a; color: #ccc; text-align: center; }
+        footer h3 { color: var(--accent); margin-bottom: 20px; text-transform: uppercase; font-size: 18px; }
+        .footer-grid { 
+            display: grid; 
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+            gap: 40px; margin-bottom: 40px; text-align: center;
+        }
+        .footer-grid p { font-size: 14px; line-height: 1.6; }
 
-        /* Mobile Adjustments */
+        /* --- RESPONSIVE MEDIA QUERIES --- */
         @media (max-width: 992px) {
             .menu-toggle { display: block; }
             .nav-list {
                 display: none; flex-direction: column; position: absolute;
-                top: 70px; left: 0; width: 100%; background: white; padding: 30px 0;
+                top: 70px; left: 0; width: 100%; background: white;
+                padding: 20px 0; box-shadow: 0 10px 15px rgba(0,0,0,0.1);
             }
             .nav-list.active { display: flex; }
-            .nav-item { margin: 15px 0; }
+            .nav-item { margin: 10px 0; width: 100%; text-align: center; }
+            .dropdown { position: relative; opacity: 1; visibility: visible; transform: none; box-shadow: none; display: none; }
+            .nav-item:hover .dropdown { display: block; }
+            .hero { background-attachment: scroll; } /* Better performance on mobile */
         }
+
+        @media (max-width: 600px) {
+            .gender-container { flex-direction: column; }
+            .gender-card { min-height: 350px; }
+            .footer-grid { grid-template-columns: 1fr; }
+        }
+
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
@@ -127,9 +139,14 @@
             <ul class="nav-list" id="navList">
                 <li class="nav-item"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="about.html">About Us</a></li>
-                <li class="nav-item"><a href="men.html">Men</a></li>
-                <li class="nav-item"><a href="women.html">Women</a></li>
-                <li class="nav-item"><a href="#contact">Contact</a></li>
+                <li class="nav-item">
+                    <a href="#">Services <i class="fas fa-chevron-down" style="font-size: 10px;"></i></a>
+                    <div class="dropdown">
+                        <a href="men.html">Men's Grooming</a>
+                        <a href="women.html">Women's Beauty</a>
+                    </div>
+                </li>
+                <li class="nav-item"><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -137,81 +154,42 @@
     <section class="hero">
         <p>Expert Grooming Since 2013</p>
         <h1>Saloo Hair by Chets</h1>
-        <div class="btn-view" style="color:white; margin-top:30px; border-color:white;">Book Appointment</div>
-    </section>
-
-    <section class="features-grid">
-        <div class="feature-item">
-            <i class="fas fa-certificate"></i>
-            <h3>Expert Stylists</h3>
-            <p>Our professionals are trained in the latest global hair trends.</p>
-        </div>
-        <div class="feature-item">
-            <i class="fas fa-magic"></i>
-            <h3>Quality Products</h3>
-            <p>We use premium, organic, and hair-friendly styling products.</p>
-        </div>
-        <div class="feature-item">
-            <i class="fas fa-clock"></i>
-            <h3>Timely Service</h3>
-            <p>We value your time. Experience luxury without the long wait.</p>
-        </div>
-        <div class="feature-item">
-            <i class="fas fa-smile-beam"></i>
-            <h3>Client Comfort</h3>
-            <p>A relaxing atmosphere designed for your ultimate grooming experience.</p>
-        </div>
     </section>
 
     <section class="gender-container">
         <a href="men.html" class="gender-card men-side">
-            <i class="fas fa-user-tie" style="font-size: 40px;"></i>
+            <i class="fas fa-mars"></i>
             <h2>Men's Grooming</h2>
-            <p style="margin-bottom: 20px; font-size: 13px; letter-spacing: 1px;">HAIRCUTS • BEARD • SPA</p>
-            <div class="btn-view">View Services</div>
+            <div class="btn-view">Discover More</div>
         </a>
         <a href="women.html" class="gender-card women-side">
-            <i class="fas fa-republican" style="font-size: 40px;"></i>
+            <i class="fas fa-venus"></i>
             <h2>Women's Beauty</h2>
-            <p style="margin-bottom: 20px; font-size: 13px; letter-spacing: 1px;">STYLING • COLOR • FACIAL</p>
-            <div class="btn-view">View Services</div>
+            <div class="btn-view">Discover More</div>
         </a>
     </section>
-
-    <div class="info-bar">
-        <div class="info-box">
-            <i class="fas fa-phone"></i>
-            <h4>Call Us</h4>
-            <p>+91 99255 69261</p>
-        </div>
-        <div class="info-box">
-            <i class="fas fa-calendar-check"></i>
-            <h4>Working Hours</h4>
-            <p>10:00 AM - 09:00 PM</p>
-        </div>
-        <div class="info-box">
-            <i class="fas fa-map-marker-alt"></i>
-            <h4>Visit Us</h4>
-            <p>Kudasan, Gandhinagar</p>
-        </div>
-    </div>
 
     <footer id="contact">
         <div class="footer-grid">
             <div class="footer-col">
-                <h3>Our Location</h3>
-                <p>Siddhraj Z Square, Shop No. W00-7<br>Kudasan, Gandhinagar - 382419</p>
+                <h3>Location</h3>
+                <p>Siddhraj Z Square, Shop No. W00-7<br>Kudasan, near Union Bank of India<br>Gandhinagar - 382419</p>
             </div>
             <div class="footer-col">
-                <h3>Stay Connected</h3>
-                <div class="social-links">
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-whatsapp"></i>
+                <h3>Contact</h3>
+                <p>Email: Chetsnai1111@gmail.com</p>
+                <p>Call: <a href="tel:9925569261" style="color: inherit; text-decoration: none; font-weight: 600;">+91 99255 69261</a></p>
+            </div>
+            <div class="footer-col">
+                <h3>Follow Us</h3>
+                <p style="letter-spacing: 2px;">@saloohairbychets</p>
+                <div style="margin-top: 15px;">
+                    <i class="fab fa-instagram" style="margin: 0 10px; font-size: 20px;"></i>
+                    <i class="fab fa-facebook" style="margin: 0 10px; font-size: 20px;"></i>
                 </div>
             </div>
         </div>
-        <p style="font-size: 11px; margin-top: 50px; opacity: 0.5; letter-spacing: 2px;">&copy; 2026 SALOO HAIR BY CHETS</p>
+        <p style="font-size: 11px; margin-top: 40px; opacity: 0.6; letter-spacing: 1px;">&copy; 2026 SALOO HAIR BY CHETS. ALL RIGHTS RESERVED.</p>
     </footer>
 
     <script>
