--- a/men.html
+++ b/men.html
@@ -132,6 +132,8 @@
             .hero { background-attachment: scroll; }
             .menu-grid { grid-template-columns: 1fr; }
         }
+
+        
     </style>
 </head>
 <body>
@@ -224,6 +226,15 @@
                 <h4>Connect</h4>
                 <p>Chetsnai1111@gmail.com</p>
                 <p>Support: 9925569261</p>
+            </div>
+
+            <div class="footer-col">
+                <h3>Follow Us</h3>
+                <p style="letter-spacing: 2px;">@saloohairbychets</p>
+                <div style="margin-top: 15px;">
+                    <i class="fab fa-instagram" style="margin: 0 10px; font-size: 20px;"></i>
+                    <i class="fab fa-facebook" style="margin: 0 10px; font-size: 20px;"></i>
+                </div>
             </div>
         </div>
         <p style="text-align:center; font-size: 10px; color: #444; margin-top: 30px; letter-spacing: 2px;">© 2026 SALOO HAIR BY CHETS | 5% GST APPLICABLE</p>
