--- a/women.html
+++ b/women.html
@@ -238,6 +238,16 @@
                 <p>Chetsnai1111@gmail.com</p>
                 <p>Support: 9925569261</p>
             </div>
+
+            <div class="footer-col">
+                <h3>Follow Us</h3>
+                <p style="letter-spacing: 2px;">@saloohairbychets</p>
+                <div style="margin-top: 15px;">
+                    <i class="fab fa-instagram" style="margin: 0 10px; font-size: 20px;"></i>
+                    <i class="fab fa-facebook" style="margin: 0 10px; font-size: 20px;"></i>
+                </div>
+                
+            </div>
         </div>
         <p style="text-align:center; font-size: 10px; color: #444; margin-top: 30px; letter-spacing: 2px;">© 2026 SALOO HAIR BY CHETS | 5% GST APPLICABLE</p>
     </footer>
